--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Labs Dashboard • Full Tools (Local + Streamlit)</title>
+  <title>Labs Dashboard</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
         </svg>
         <div>
           <div class="title">Labs Dashboard</div>
-          <div class="badge">Full tools • Iframe mode</div>
+          <div class="badge">Full tools</div>
         </div>
       </div>
       <div class="toolbar">
