--- a/pages/about.html
+++ b/pages/about.html
@@ -9,4 +9,14 @@
     <li><b>Triển khai:</b> đẩy repo lên GitHub → Streamlit Community Cloud.</li>
   </ul>
   <p class="mini">Lưu ý: Ping/trace thực tế cần chạy trên terminal; bản này cung cấp câu lệnh để copy nhanh.</p>
+
+  <hr style="border:none; border-top:1px solid var(--surface); margin:16px 0" />
+  <h3>Contact / Help</h3>
+  <ul>
+    <li>Email hỗ trợ: <a href="mailto:you@example.com">you@example.com</a></li>
+    <li>Tài liệu nội bộ: <a href="#" target="_blank" rel="noopener">Đường dẫn Wiki</a></li>
+    <li>Báo lỗi/đề xuất: mở issue trên repo hoặc liên hệ qua email.</li>
+  </ul>
+  <p class="mini">* Hãy chỉnh lại email/đường dẫn trong <code>pages/about.html</code> cho phù hợp tổ chức của bạn.</p>
+
 </div>
