--- a/pages/network.html
+++ b/pages/network.html
@@ -5,11 +5,11 @@
   <div class="grid">
     <div class="tool" id="publicIpCard">
       <h4>IP công cộng (Public IP)</h4>
-      <div class="row" style="gap:8px">
-        <button class="btn" id="getPublicIp">Lấy IP</button>
-        <code id="publicIpOut" style="flex:1">—</code>
+      <div class="row" style="gap:8px; align-items:center">
+        <label style="min-width:120px;margin:0">Địa chỉ IP:</label>
+        <code id="publicIpOut" style="flex:1">Đang lấy…</code>
       </div>
-      <div class="mini">Dùng ipify qua CORS proxy để hiển thị IP public.</div>
+      <div class="mini">Tự động hiển thị IP public (không cần bấm nút).</div>
     </div>
 
     <div class="tool" id="sslCheckCard">
@@ -80,7 +80,7 @@ async function getPublicIp() {
     out.textContent = '⚠️ Lỗi hoặc bị chặn CORS/rate-limit';
   }
 }
-document.getElementById('getPublicIp')?.addEventListener('click', getPublicIp);
+getPublicIp();
 
 // === SSL Check (SSL Labs qua allorigins) ===
 async function sslAnalyze(host, mode='cache'){
@@ -182,7 +182,6 @@ document.getElementById('psStart')?.addEventListener('click', async ()=>{
       tasks.push(checkPort(host, port, sch, timeoutMs));
     }
   }
-  // Limit concurrency
   const CONC = 6;
   const results = [];
   let idx = 0;
