--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Labs Dashboard</title>
+  <title>Dashboard</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -18,8 +18,8 @@
           <circle cx="17" cy="12" r="1.2" fill="currentColor"/>
         </svg>
         <div>
-          <div class="title">Labs Dashboard</div>
-          <div class="badge">Full tools</div>
+          <div class="title">Labs</div>
+          <div class="badge"> </div>
         </div>
       </div>
       <div class="toolbar">
@@ -40,7 +40,7 @@
     </main>
 
     <footer>
-      <div>© <span id="year"></span> Labs Tools • Built for fast, reliable on‑call.</div>
+      <div>© <span id="year"></span> Design By VINHCB </div>
     </footer>
   </div>
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
