--- a/pages/network.html
+++ b/pages/network.html
@@ -1,19 +1,44 @@
-<link rel="stylesheet" href="../assets/style.css">
+<link rel="stylesheet" href="./style.css">
+<style>
+/* Fallback styles (in case global CSS fails to apply) */
+.tool input, .tool textarea, .tool select {
+  width: 100%;
+  padding: 10px 12px;
+  border-radius: 10px;
+  border: 1px solid var(--surface);
+  background: var(--surface);
+  color: var(--text);
+  outline: none;
+}
+.tool input::placeholder, .tool textarea::placeholder { color: var(--subtle); }
+.btn { display: inline-flex; align-items: center; gap: 8px; padding: 8px 12px; border-radius: 10px; border: 0; cursor: pointer; background: var(--primary); color: #fff; text-decoration: none; }
+.btn.ghost { background: transparent; color: var(--text); border: 1px dashed var(--subtle); }
+.row { display: flex; flex-wrap: wrap; align-items: center; gap: 10px; }
+.tool { background: var(--muted); padding: 12px; border-radius: 12px; border: 1px solid var(--surface); }
+</style>
+
 <div style="padding:18px">
   <h3 style="margin:0 0 12px 0">Network Tools</h3>
 
   <div class="grid">
     <div class="tool" id="publicIpCard">
-      <h4>IP công cộng (Public IP)</h4>
+      <h4>IP Tĩnh (ra Internet)</h4>
       <div class="row" style="gap:8px; align-items:center">
-        <label style="min-width:120px;margin:0">Địa chỉ IP:</label>
-        <code id="publicIpOut" style="flex:1">Đang lấy…</code>
+        <label style="min-width:120px;margin:0">IPv4:</label>
+        <code id="publicIpv4" style="flex:1">Đang lấy…</code>
       </div>
-      <div class="mini">Tự động hiển thị IP public (không cần bấm nút).</div>
+      <div class="row" style="gap:8px; align-items:center">
+        <label style="min-width:120px;margin:0">IPv6:</label>
+        <code id="publicIpv6" style="flex:1">—</code>
+      </div>
+      <div class="mini">
+        Đây là địa chỉ IP mà Internet nhìn thấy từ mạng của bạn (WAN egress).
+        Nếu ISP cấp IP tĩnh thì đây chính là IP tĩnh; nếu là IP động/CGNAT thì hiển thị IP hiện tại.
+      </div>
     </div>
 
     <div class="tool" id="sslCheckCard">
-      <h4>Check SSL (SSL Labs)</h4>
+      <h4>Check SSL</h4>
       <div class="row" style="gap:8px; align-items:flex-end">
         <div style="flex:2">
           <label>Domain</label>
@@ -65,22 +90,63 @@
 </div>
 
 <script>
-// === Public IP (ipify qua allorigins) ===
-async function getPublicIp() {
-  const url = 'https://api.allorigins.win/raw?url=' + encodeURIComponent('https://api.ipify.org?format=json');
-  const out = document.getElementById('publicIpOut');
-  out.textContent = 'Đang lấy...';
+// === Public IP (WAN egress) with v4/v6 & multi-source fallback ===
+const ipv4re = /^(?:\d{1,3}\.){3}\d{1,3}$/;
+const ipv6re = /^[0-9a-f:]+$/i;
+
+async function fetchJSON(url, timeout=6000){
+  const ctrl = new AbortController(); const t = setTimeout(()=>ctrl.abort('timeout'), timeout);
+  try { const r = await fetch(url, { cache:'no-store', signal: ctrl.signal }); clearTimeout(t); return await r.json(); }
+  catch(e){ clearTimeout(t); throw e; }
+}
+async function fetchTEXT(url, timeout=6000){
+  const ctrl = new AbortController(); const t = setTimeout(()=>ctrl.abort('timeout'), timeout);
+  try { const r = await fetch(url, { cache:'no-store', signal: ctrl.signal }); clearTimeout(t); return await r.text(); }
+  catch(e){ clearTimeout(t); throw e; }
+}
+async function tryAll(tasks){
+  for (const t of tasks){
+    try { const v = await t(); if (v) return v; } catch {}
+  }
+  return '';
+}
+
+async function getIPv4(){
+  return await tryAll([
+    async()=>{ const j = await fetchJSON('https://api4.ipify.org?format=json'); return ipv4re.test(j.ip)? j.ip : ''; },
+    async()=>{ const j = await fetchJSON('https://api.allorigins.win/raw?url=' + encodeURIComponent('https://api4.ipify.org?format=json')); return ipv4re.test(j.ip)? j.ip : ''; },
+    async()=>{ const j = await fetchJSON('https://api.myip.com'); return ipv4re.test(j.ip)? j.ip : ''; },
+    async()=>{ const j = await fetchJSON('https://api.allorigins.win/raw?url=' + encodeURIComponent('https://api.myip.com')); return ipv4re.test(j.ip)? j.ip : ''; },
+    async()=>{ const t = await fetchTEXT('https://ifconfig.me/ip'); const v=t.trim(); return ipv4re.test(v)? v : ''; },
+    async()=>{ const t = await fetchTEXT('https://api.allorigins.win/raw?url=' + encodeURIComponent('https://ifconfig.me/ip')); const v=t.trim(); return ipv4re.test(v)? v : ''; }
+  ]);
+}
+
+async function getIPv6(){
+  return await tryAll([
+    async()=>{ const j = await fetchJSON('https://api6.ipify.org?format=json'); return ipv6re.test(j.ip)? j.ip : ''; },
+    async()=>{ const j = await fetchJSON('https://api.allorigins.win/raw?url=' + encodeURIComponent('https://api6.ipify.org?format=json')); return ipv6re.test(j.ip)? j.ip : ''; },
+    async()=>{ const t = await fetchTEXT('https://ipv6.icanhazip.com/'); const v=t.trim(); return ipv6re.test(v)? v : ''; },
+    async()=>{ const t = await fetchTEXT('https://api.allorigins.win/raw?url=' + encodeURIComponent('https://ipv6.icanhazip.com/')); const v=t.trim(); return ipv6re.test(v)? v : ''; }
+  ]);
+}
+
+async function initPublicIp(){
+  const el4 = document.getElementById('publicIpv4');
+  const el6 = document.getElementById('publicIpv6');
+  if (el4) el4.textContent = 'Đang lấy…';
+  if (el6) el6.textContent = 'Đang lấy…';
+
   try {
-    const res = await fetch(url, { cache: 'no-store' });
-    const txt = await res.text();
-    let ip = '';
-    try { ip = JSON.parse(txt).ip; } catch { ip = txt.trim(); }
-    out.textContent = ip || '—';
-  } catch (e) {
-    out.textContent = '⚠️ Lỗi hoặc bị chặn CORS/rate-limit';
+    const [v4, v6] = await Promise.all([getIPv4(), getIPv6()]);
+    if (el4) el4.textContent = v4 || '—';
+    if (el6) el6.textContent = v6 || '—';
+  } catch {
+    if (el4) el4.textContent = '⚠️ Lỗi lấy IP';
+    if (el6) el6.textContent = '⚠️';
   }
 }
-getPublicIp();
+initPublicIp();
 
 // === SSL Check (SSL Labs qua allorigins) ===
 async function sslAnalyze(host, mode='cache'){
@@ -108,7 +174,7 @@ function formatSsl(data){
   } else {
     lines.push('Không có endpoint.');
   }
-  return lines.join('\\n');
+  return lines.join('\n');
 }
 document.getElementById('sslStart')?.addEventListener('click', async () => {
   const host = document.getElementById('sslHost').value.trim();
@@ -174,7 +240,7 @@ document.getElementById('psStart')?.addEventListener('click', async ()=>{
   const timeoutMs = parseInt(document.getElementById('psTimeout').value, 10) || 3000;
   const out = document.getElementById('psOut');
   if (!host || ports.length===0){ out.textContent = 'Nhập host và danh sách cổng hợp lệ.'; return; }
-  out.textContent = `Đang quét ${host} trên ${ports.length} cổng...\\n`;
+  out.textContent = `Đang quét ${host} trên ${ports.length} cổng...\n`;
   const schemes = schemeSel==='both' ? ['http','https'] : [schemeSel];
   const tasks = [];
   for (const port of ports){
@@ -190,10 +256,10 @@ document.getElementById('psStart')?.addEventListener('click', async ()=>{
     const i = idx++;
     const r = await tasks[i];
     results.push(r);
-    out.textContent = results.map(x=>`${x.scheme.toUpperCase()} ${x.port}: ${x.status}`).join('\\n');
+    out.textContent = results.map(x=>`${x.scheme.toUpperCase()} ${x.port}: ${x.status}`).join('\n');
     await runNext();
   }
   await Promise.all(new Array(Math.min(CONC, tasks.length)).fill(0).map(()=>runNext()));
-  out.textContent += `\\nHoàn tất.`;
+  out.textContent += `\nHoàn tất.`;
 });
 </script>
