--- a/pages/store.html
+++ b/pages/store.html
@@ -18,7 +18,7 @@
       <h3>Speedtest by Ookla</h3>
       <p>Đo tốc độ mạng nhanh, tin cậy.</p>
       <div class="row">
-        <a class="btn" href="https://www.speedtest.net/apps" target="_blank" rel="noopener">Tải ứng dụng</a>
+        <a class="btn" href="https://www.speedtest.net/apps" target="_blank" rel="noopener">Tải về</a>
         <a class="btn secondary" href="https://www.speedtest.net/" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
@@ -33,8 +33,16 @@
       <h3>TeamViewer</h3>
       <p>Hỗ trợ điều khiển từ xa cho Labs/Helpdesk.</p>
       <div class="row">
-        <a class="btn" href="https://www.teamviewer.com/vi/download/windows/" target="_blank" rel="noopener">Tải TeamViewer</a>
+        <a class="btn" href="https://www.teamviewer.com/vi/download/windows/" target="_blank" rel="noopener">Tải về</a>
         <a class="btn secondary" href="https://www.teamviewer.com/vi/" target="_blank" rel="noopener">Mở web</a>
+      </div>
+    </article>
+	<article class="card" data-tags="vpn wireguard network bảo mật">
+      <h3>WireGuard</h3>
+      <p>VPN nhẹ, an toàn cho truy cập nội bộ.</p>
+      <div class="row">
+        <a class="btn" href="https://www.wireguard.com/install/" target="_blank" rel="noopener">Tải về</a>
+		<a class="btn secondary" href="https://www.wireguard.com/" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
     <article class="card" data-tags="terminal android termux ssh">
@@ -44,13 +52,7 @@
     
       </div>
     </article>
-    <article class="card" data-tags="vpn wireguard network bảo mật">
-      <h3>WireGuard</h3>
-      <p>VPN nhẹ, an toàn cho truy cập nội bộ.</p>
-      <div class="row">
-        <a class="btn" href="https://www.wireguard.com/install/" target="_blank" rel="noopener">Tải ứng dụng</a>
-      </div>
-    </article>
+    
   </div>
 </div>
 <script>
