--- a/pages/store.html
+++ b/pages/store.html
@@ -26,7 +26,8 @@
       <h3>AnyDesk</h3>
       <p>Hỗ trợ điều khiển từ xa cho Labs/Helpdesk.</p>
       <div class="row">
-        <a class="btn" href="https://anydesk.com/en/downloads" target="_blank" rel="noopener">Tải về</a>
+        <a class="btn" href="https://anydesk.com/en/downloads/windows" target="_blank" rel="noopener">Tải về</a>
+		<a class="btn secondary" href="https://anydesk.com/en" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
     <article class="card" data-tags="teamviewer remote hỗ trợ từ xa">
